opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/ppx_sexp_message"
bug-reports: "https://github.com/janestreet/ppx_sexp_message/issues"
dev-repo: "https://github.com/janestreet/ppx_sexp_message.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "ppx_sexp_message" "--root" "." "-j" jobs]
]
depends: [
  "jbuilder"
  "ppx_core"
  "ppx_driver"
  "ppx_here"
  "ppx_metaquot"
  "ppx_sexp_conv"
  "sexplib"
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
A ppx rewriter for easy construction of s-expressions

Part of the Jane Street's PPX rewriters collection.
"
